--- a/app/views/decks/index.html.erb
+++ b/app/views/decks/index.html.erb
@@ -25,5 +25,6 @@
 </table>
 
 <br>
+<%= link_to 'New Round', new_round_path %>
+<%= link_to 'Sign Up', new_user_path %>
 
-<%= link_to 'New Deck', new_deck_path %>
