views and models for cards decks and users

--- a/app/views/cards/show.html.erb
+++ b/app/views/cards/show.html.erb
@@ -10,5 +10,13 @@
   <%= @card.answer %>
 </p>
 
+<div class="field">
+    <%= f.label :answer %><br>
+    <%= f.text_field :answer %>
+  </div>
+  <div class="actions">
+    <%= f.submit %>
+</div>
+
 <%= link_to 'Edit', edit_card_path(@card) %> |
 <%= link_to 'Back', cards_path %>
